--- a/server/package.json
+++ b/server/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.14",
     "@types/node": "^18.11.0",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14"
   }
 }
