--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.11.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "mongoose": "^6.6.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
