--- a/server/package.json
+++ b/server/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9"
   }
 }
