--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/node": "^18.11.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
+    "cors": "^2.8.5",
     "@types/jsonwebtoken": "^8.5.9"
   }
 }
